--- a/src/components/Main/main.module.css
+++ b/src/components/Main/main.module.css
@@ -1,7 +1,33 @@
+:root{
+    --laranjaclaro: #ff7f1d;
+    --laranjaescuro: #A52100;
+    --textobotao:  #F1EEDF;
+    --dourado:  #CDA335;
+    --ocre:          #8D4B00; 
+    --marron:        #521000; 
+    --palha:        #F9BA47;
+
+}
 .banner{
     height: 450px;
     width: 100%;
     background-color: rgba(75,156,75,0.8);
     margin-bottom: 42px;
+}
+
+section{
+    width: 333px;
+    height: 356px;
+    border: 1px solid black;
+    border-radius: 5%;
+    box-shadow: 1px 1px 2px var(--laranjaescuro);
+}
+
+.box{
+    display: flex;
+    justify-content:space-around;
+    margin-bottom: 42px;
+    /* background-color: #8D4B00; */
+    padding: 15px;
 }
 
