--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -11,4 +11,11 @@ footer ul{
     display: flex;
     gap: 20px;
 }
+footer ul li a i{
+    color: #000;
+}
 
+footer ul li a i:hover{
+    transform: scale(1.4);
+
+}
