--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -21,7 +21,7 @@
     justify-content: space-between;
     font-family: 'DM Sans', sans-serif;
 }
-img{
+.logoImg{
     width: 40%;
     object-fit: contain;
     height: 90%;
