--- a/src/pages/QuemSomos/quemsomos.module.css
+++ b/src/pages/QuemSomos/quemsomos.module.css
@@ -1,6 +1,6 @@
 .title{
     color: rgb(243, 81, 7); 
-    font-size: 30px;
+    /* font-size: 30px; */
     margin-top:30px;
     margin-bottom: 10px;
 }
@@ -9,25 +9,31 @@
     /* height: 200px; */
     width: 100%;
     justify-content: space-between;
+    margin-left: 30px;
+    font-family: 'DM Sans', sans-serif;
     
 }
 .text{
     width: 40%;
-    border: 1px solid red;
     text-align: center;
     padding: 10px;
+    
+    
 }
 .boxImg{
     width: 900px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 
 
 }
-.boxImg img{
-    width: 400px;
-    height: 400px;
-    object-fit: cover;
 
+.caixa{
+    width: 200px;
+    height: 200px;
+    background-color: red;
 }
 
 .conteudo{
