--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -20,6 +20,7 @@
     background-color: rgba(0,0,0,0.8);
     justify-content: space-between;
     font-family: 'DM Sans', sans-serif;
+    
 }
 .logoImg{
     width: 40%;
@@ -62,6 +63,7 @@
 }
 .redesSociais li:hover{
     transform: scale(1.4);
+    
 }
 
 .menu{
@@ -83,4 +85,5 @@
 
 .link:hover{
     background-color: var(--laranjaclaro);
+    border-radius:8px;
 }
