--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,15 +1,27 @@
-footer{
+.footer{
     height: 100px;
     width: 100%;
     background-color: rgba(50,50,50, 0.4);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    line-height: 25px;
+    color: #2e2e2e;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+    
+   
+}
+.ftexto{
+   
+    margin-left: 7%;
 }
 
 footer ul{
     display: flex;
     gap: 20px;
+    margin-right: 7%;
 }
 footer ul li a i{
     color: #000;
