--- a/src/components/Contatos/contatos.module.css
+++ b/src/components/Contatos/contatos.module.css
@@ -31,8 +31,12 @@
     margin: 0;
     margin-top: 50px;     
     margin-bottom: 4%; 
+    /* background-color: gray; */
     
     width: 40%;
+}
+.containner h1{
+    margin-bottom: 20px;
 }
 
 .wrapper{
@@ -41,10 +45,61 @@
     margin: 4% 7%;
     font-family: 'DM Sans', sans-serif;
     color: #2e2e2e;
+    border: 1px solid black;
     
     
+}
+.containner form{
+    width: 100%;
 }
 
 .linhaForm{
     margin-bottom: 10px;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+    font-family: 'DM Sans', sans-serif;
+    padding-inline: 20px;
+    
+    
+}
+.linhaForm input , .linhaForm textarea {
+    font-size: 1.2rem;
+    padding: 2px 10px;
+    width: 350px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    background-color: rgba(128, 128, 128, 0.678);
+    
+    
+}
+.linhaForm input:focus , .linhaForm textarea:focus{
+    
+    border: solid 1px orangered;
+
+}
+.linhaForm textarea{
+    resize: none;
+}
+.linhaForm label{
+    font-size: 1.3rem;
+}
+.btnForm{
+    background-color: var(--laranjaclaro);
+    font-size: 1.3rem;
+    padding: 5px 10px;
+    border-radius: 5px;
+    display: block;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
+    width: 92%;
+    cursor: pointer;
+}
+.btnForm:hover{
+    background-color: var(--laranjaescuro);
 }
