fotos slider inseridas

--- a/src/components/Contatos/contatos.module.css
+++ b/src/components/Contatos/contatos.module.css
@@ -45,7 +45,7 @@
     margin: 4% 7%;
     font-family: 'DM Sans', sans-serif;
     color: #2e2e2e;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     
     
 }
