--- a/src/components/Atracoes/card.module.css
+++ b/src/components/Atracoes/card.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   font-family: 'DM Sans', sans-serif;
   margin: 15px auto;
-  background-color: var(--palha);
+  background-color: rgba(204, 204, 204, 0.411);
   box-shadow: 2px 2px 5px gray;
   border-radius: 5px;
 }
@@ -21,6 +21,7 @@
 }
 .info h2{
   margin-bottom: 10px;
+  text-transform: uppercase;
 }
 
 .img{
