--- a/src/components/Main/main.module.css
+++ b/src/components/Main/main.module.css
@@ -12,7 +12,7 @@
     height: 450px;
     width: 100%;
     background-color: rgba(75,156,75,0.8);
-    margin-bottom: 42px;
+    /* margin-bottom: 42px; */
 }
 
 .sectionHome{
