--- a/src/components/Ingressos/ingressos.module.css
+++ b/src/components/Ingressos/ingressos.module.css
@@ -1,17 +1,103 @@
-
-
+.maincss{
+   
+    font-family: sans-serif;
+    text-align: center;
+    
+}
 .title{
+    margin-bottom: 80px; 
+    margin-top: 80px; 
+    font-size: 50px;
+}
+.comprasingressos{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 20px; 
+    display:wrap;   
+}
+
+.boxingressos{
+    width: 400px;
+    height: 500px; 
+    border-radius: 50px;
+    background-color: rgb(233, 227, 220); 
+    margin-bottom: 50px;  
+}
+.compravalorinteiro{
+    background-color: rgb(231, 105, 21);
+    border-radius: 10px;
+    color: white;
+}
+.containeringressos{
+    margin-top: 40px;
+    font-size: 25px;
+}
+
+.titleingresos{
     display: flex;
     justify-content: center;
-    
- }
- button{
-     width: 100px;
-     height: 30px;
- }
- .comprasingressos{
-     display: flex;
-     justify-content: space-between;
-     padding-left: 30%;
-     padding-right: 30%;
- }
+    align-items: center;
+    border-radius: 10px;
+    width: 100%;
+    height: 80px;
+}
+.valoresingressos{
+    margin-top: 0;
+    font-size: 50px;
+}
+.divbtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+button{
+    display: flex;
+    align-items: center;
+    background-color:initial;
+    border-radius: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: none;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.valortotalingreso{
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    width: 200px;
+    height: 30px;
+    border-radius: 8px;
+    background-color: rgb(231, 105, 21);
+}
+.valorfinalingreso{
+    margin-left: auto;
+    margin-right: auto;
+    color: rgb(255, 255, 255);
+    width: 200px;
+    height: 40px;
+    border-radius: 8px;
+    background-color: rgb(231, 105, 21);
+    font-size: 36px;
+}
+.carrinhobtn{
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #12af12;
+    width: 100px; ;
+    height: 60px;
+    margin-bottom: 40px;
+    margin-top: 10px;  
+    border-radius: 10px;
+}
+.valortotal{
+    font-size: 25px;
+}
